most_loyal_hotels completed
